syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "subs/_EnergyNFTTransfer.proto";

// Represent Historical Energy Reward record
message _EnergyRewardReceipt {
  enum _PurchaseType {
    _PURCHASETYPE_UNKNOWN                     = 0;
    _PURCHASETYPE_CONSUMABLE                  = 1;
    _PURCHASETYPE_NONCONSUMABLE               = 2;
  }
  
  message _Item {
    enum _ItemType {
      _ITEMTYPE_UNKNOWN                       = 0;
      _ITEMTYPE_ICON                          = 1;
      _ITEMTYPE_ENERGY                        = 2;
      _ITEMTYPE_NFT                           = 3;
    }
    
    message _NFT {
      enum _Rarity {
        _RARITY_UNKNOWN                       = 0;
        _RARITY_COMMON                        = 1;
        _RARITY_UNCOMMON                      = 2;
        _RARITY_RARE                          = 3;
        _RARITY_EPIC                          = 4;
        _RARITY_LEGENDARY                     = 5;
      }
      string          url                     = 1;
      _Rarity         rarity                  = 2;
      int64           token_id                = 3;
    }
    
    message _ICON {
      enum _IconID {
        _ICON_UNKNOWN                         = 0;
        _ICON_ENERGY                          = 1;
      }
      
      _IconID                 id              = 1;
    }
    
    message _ENERGY {
      enum _Size {
        _SIZE_UNKNOWN                         = 0;
        _SIZE_SMALL                           = 1;
        _SIZE_MEDIUM                          = 2;
        _SIZE_LARGE                           = 3;
      }
      string                  url             = 1;
      string                  amount          = 2;
      _Size                   size            = 3;
    }
    
    string                    item_id         = 1;
    string                    name            = 2;
    optional string           description     = 3;
    string                    chance          = 4;
    _ItemType                 type            = 5;
    
    oneof payload {
      _NFT                    nft             = 6;
      _ICON                   icon            = 7;
      _ENERGY                 energy          = 8;
    }
  }
  
  string                      uuid            = 1;
  _PurchaseType               purchase_type   = 2;
  string                      reward_id       = 3;
  _Item                       item            = 4;
  bool                        is_spent        = 5;
  google.protobuf.Timestamp   purchase_date   = 6;
  optional _EnergyNFTTransfer nft_tx          = 7;
}
